# rez-pyside2

./: CMakeLists.txt  README.md  install.sh  package.py
